--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -20,7 +20,7 @@
     - [2.5.2. FlatView相关结构体](#252-flatview相关结构体)
     - [FlatView 与 MemoryRegion](#flatview-与-memoryregion)
   - [2.6. MemoryRegionSection: 虚拟机物理地址空间GPA](#26-memoryregionsection-虚拟机物理地址空间gpa)
-  - [2.7. KVMSlot:](#27-kvmslot)
+  - [2.7. KVMSlot: KVM内存条模型](#27-kvmslot-kvm内存条模型)
   - [2.8. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系](#28-addressspace-memoryregion-flatview-memoryregionsection与kvmslot的关系)
   - [2.9. MemoryListener](#29-memorylistener)
     - [全局链表和AddressSpace自己的MemoryListener](#全局链表和addressspace自己的memorylistener)
@@ -418,7 +418,7 @@ MemoryRegionSection表示的是**MemoryRegion的一部分**。
 
 这个其实跟FlatRange差不多。
 
-## 2.7. KVMSlot:
+## 2.7. KVMSlot: KVM内存条模型
 
 ```cpp
 typedef struct KVMSlot
