--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1723,9 +1723,11 @@ static int kvm_set_user_memory_region(KVMMemoryListener *kml, KVMSlot *slot, boo
 static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 {
     struct kvm_userspace_memory_region mem;
-
+    // slot id
     mem.slot = slot->slot;
+    // 虚拟机物理地址
     mem.guest_phys_addr = slot->start_addr;
+    // 对应的qemu分配的内存, HVA
     mem.userspace_addr = (unsigned long)slot->ram;
     mem.flags = slot->flags;
     if (s->migration_log) {
@@ -1738,6 +1740,7 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
         mem.memory_size = 0;
         kvm_vm_ioctl(s, KVM_SET_USER_MEMORY_REGION, &mem);
     }
+    // 内存大小
     mem.memory_size = slot->memory_size;
     return kvm_vm_ioctl(s, KVM_SET_USER_MEMORY_REGION, &mem);
 }
