--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -21,6 +21,7 @@
       - [4.3.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#4311-generate_memory_topologymr-根据给定的mr生成新的flatview)
       - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
+- [总结](#总结)
 - [6. 参考](#6-参考)
 
 <!-- /code_chunk_output -->
@@ -655,14 +656,6 @@ done:
 ```
 
 然后就按照**优先级顺序**把**subregion**插入到`system_memory`的**subregions链表**中，这些都比较简单.
-
-对上述x86_64的`memory_region_init_alias()`画图描述：
-
-![2020-03-01-00-23-18.png](./images/2020-03-01-00-23-18.png)
-
-上述x86_64 ram的`memory_region_add_subregion_common()`
-
-![2020-03-01-00-23-42.png](./images/2020-03-01-00-23-42.png)
 
 目前我们添加了区域，**地址空间已经发生变化**，自然要把变化和KVM进行同步，这一工作由`memory_region_transaction_commit()`实现。
 
@@ -1997,6 +1990,30 @@ void update_memslots(struct kvm_memslots *slots, struct kvm_memory_slot *new,
     slots->generation = last_generation + 1;
 }
 ```
+
+# 总结
+
+1. 全局MemoryRegion: system_memory以及system_io的初始化
+
+![2020-03-12-15-20-57.png](./images/2020-03-12-15-20-57.png)
+
+![2020-03-12-15-21-29.png](./images/2020-03-12-15-21-29.png)
+
+2. GPA (guest physical address) 与HVA (host virtual address)的公共代码的分析，稍后会分别针对x86_64架构以及s390x结构做分别的细致分析。
+
+3. 内存发生变化时，如果更新内存映射 (GPA-HVA-HPA)。
+
+`x86_64`内存初始化的代码分析
+
+![2020-03-12-15-23-07.png](./images/2020-03-12-15-23-07.png)
+
+对上述x86_64的`memory_region_init_alias()`画图描述：
+
+![2020-03-01-00-23-18.png](./images/2020-03-01-00-23-18.png)
+
+上述x86_64 ram的`memory_region_add_subregion_common()`
+
+![2020-03-01-00-23-42.png](./images/2020-03-01-00-23-42.png)
 
 # 6. 参考
 
