--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -21,6 +21,7 @@
     - [FlatView 与 MemoryRegion](#flatview-与-memoryregion)
   - [2.6. MemoryRegionSection: 虚拟机物理地址空间GPA](#26-memoryregionsection-虚拟机物理地址空间gpa)
   - [2.7. KVMSlot: KVM内存条模型](#27-kvmslot-kvm内存条模型)
+  - [kvm_userspace_memory_region: kvm参数](#kvm_userspace_memory_region-kvm参数)
   - [2.8. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系](#28-addressspace-memoryregion-flatview-memoryregionsection与kvmslot的关系)
   - [2.9. MemoryListener](#29-memorylistener)
     - [全局链表和AddressSpace自己的MemoryListener](#全局链表和addressspace自己的memorylistener)
@@ -439,6 +440,23 @@ typedef struct KVMSlot
 ```
 
 KVMSlot更接近KVM.
+
+## kvm_userspace_memory_region: kvm参数
+
+```cpp
+struct kvm_userspace_memory_region {
+        // 插槽号
+        __u32 slot;
+        // 标志
+        __u32 flags;
+        // 虚拟机物理地址
+        __u64 guest_phys_addr;
+        // 虚拟机内存大小(字节为单位)
+        __u64 memory_size; /* bytes */
+        // qemu分配的内存的
+        __u64 userspace_addr; /* start of the userspace allocated memory */
+};
+```
 
 kvm_userspace_memory_region是和kvm共享的一个结构，说共享不太恰当，但是其实最终作为参数给kvm使用的，kvm获取控制权后，从栈中复制该结构到内核，其中字段意思就很简单，不在赘述。
 
