--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -21,8 +21,8 @@
       - [4.3.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#4311-generate_memory_topologymr-根据给定的mr生成新的flatview)
       - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. 新FlatRange的更新](#5-新flatrange的更新)
-- [总结](#总结)
-- [6. 参考](#6-参考)
+- [6. 总结](#6-总结)
+- [7. 参考](#7-参考)
 
 <!-- /code_chunk_output -->
 
@@ -1991,31 +1991,47 @@ void update_memslots(struct kvm_memslots *slots, struct kvm_memory_slot *new,
 }
 ```
 
-# 总结
+# 6. 总结
 
 1. 全局MemoryRegion: system_memory以及system_io的初始化
 
 ![2020-03-12-15-20-57.png](./images/2020-03-12-15-20-57.png)
 
+2. GPA (guest physical address) 与HVA (host virtual address)的公共代码的分析。
+
+3. 内存发生变化时，更新内存映射 (GPA-HVA-HPA)。
+
 ![2020-03-12-15-21-29.png](./images/2020-03-12-15-21-29.png)
 
-2. GPA (guest physical address) 与HVA (host virtual address)的公共代码的分析，稍后会分别针对x86_64架构以及s390x结构做分别的细致分析。
-
-3. 内存发生变化时，如果更新内存映射 (GPA-HVA-HPA)。
-
-`x86_64`内存初始化的代码分析
+4. `x86_64`内存初始化的代码分析
 
 ![2020-03-12-15-23-07.png](./images/2020-03-12-15-23-07.png)
 
-对上述x86_64的`memory_region_init_alias()`画图描述：
+5. 对上述x86_64的`memory_region_init_alias()`画图描述：
 
 ![2020-03-01-00-23-18.png](./images/2020-03-01-00-23-18.png)
 
-上述x86_64 ram的`memory_region_add_subregion_common()`
+6. 上述x86_64 ram的`memory_region_add_subregion_common()`
 
 ![2020-03-01-00-23-42.png](./images/2020-03-01-00-23-42.png)
 
-# 6. 参考
+7. KVM_SET_USER_MEMORY_REGION的调用过程
+
+![2020-03-12-15-26-11.png](./images/2020-03-12-15-26-11.png)
+
+8. flatviews_reset()函数解析
+
+![2020-03-12-15-26-29.png](./images/2020-03-12-15-26-29.png)
+
+9. address_space_set_flatview()函数解析
+
+![2020-03-12-15-27-27.png](./images/2020-03-12-15-27-27.png)
+
+10. address_space_update_topology_pass => region_add()
+
+![2020-03-12-15-27-49.png](./images/2020-03-12-15-27-49.png)
+
+# 7. 参考
 
 https://www.cnblogs.com/ck1020/p/6729224.html (已完)
 
