--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -453,12 +453,12 @@ struct kvm_userspace_memory_region {
         __u64 guest_phys_addr;
         // 虚拟机内存大小(字节为单位)
         __u64 memory_size; /* bytes */
-        // qemu分配的内存的
+        // qemu分配的内存的起始地址, HVA
         __u64 userspace_addr; /* start of the userspace allocated memory */
 };
 ```
 
-kvm_userspace_memory_region是和kvm共享的一个结构，说共享不太恰当，但是其实最终作为参数给kvm使用的，kvm获取控制权后，从栈中复制该结构到内核，其中字段意思就很简单，不在赘述。
+kvm_userspace_memory_region是和kvm共享的一个结构，说共享不太恰当，但是其实最终作为参数给kvm使用的，kvm获取控制权后，从栈中复制该结构到内核。
 
 ## 2.8. AddressSpace、MemoryRegion、FlatView、MemoryRegionSection与KVMslot的关系
 
