--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -20,7 +20,7 @@
     - [4.3.1. address_space_update_topology(): 设置拓扑flatview, 会与KVM交互](#431-address_space_update_topology-设置拓扑flatview-会与kvm交互)
       - [4.3.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#4311-generate_memory_topologymr-根据给定的mr生成新的flatview)
       - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
-- [5. 新FlatRange的更新](#5-新flatrange的更新)
+- [5. MEMORY_LISTENER_UPDATE_REGION(): 新FlatRange的更新](#5-memory_listener_update_region-新flatrange的更新)
   - [5.1. kvm_set_phys_mem():](#51-kvm_set_phys_mem)
 - [6. 总结](#6-总结)
 - [7. 参考](#7-参考)
@@ -1314,6 +1314,7 @@ memory-region: virtio-pci
 ```cpp
 static void address_space_set_flatview(AddressSpace *as)
 {
+    // 返回as的current_map
     FlatView *old_view = address_space_to_flatview(as);
     // 获取AddressSpace的root MR
     MemoryRegion *physmr = memory_region_get_flatview_root(as->root);
@@ -1337,13 +1338,13 @@ static void address_space_set_flatview(AddressSpace *as)
 
     if (!QTAILQ_EMPTY(&as->listeners)) {
         FlatView tmpview = { .nr = 0 }, *old_view2 = old_view;
-
+        // 要么为0, 要么就使用之前的flatview
         if (!old_view2) {
             old_view2 = &tmpview;
         }
         // 删除
         address_space_update_topology_pass(as, old_view2, new_view, false);
-        // 新加
+        // 新加, 传参
         address_space_update_topology_pass(as, old_view2, new_view, true);
     }
 
@@ -1391,6 +1392,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
             frold = NULL;
         }
         if (inew < new_view->nr) {
+            // 
             frnew = &new_view->ranges[inew];
         } else {
             frnew = NULL;
@@ -1442,20 +1444,19 @@ static void address_space_update_topology_pass(AddressSpace *as,
 }
 ```
 
-该函数倒是不长，主体是一个while循环，循环条件是old_view->nr和new_view->nr,表示新旧view的可用FlatRange数目。这里依次对FR数组的对应FR 做对比，主要由下面几种情况：frold和frnew均存在、frold存在但frnew不存在，frold不存在但frnew存在。下面的if划分和上面的略有不同：
+该函数倒是不长，主体是一个while循环，循环条件是`old_view->nr`和`new_view->nr`,表示**新旧view**的**可用FlatRange数目**。这里依次对**FR数组**的**对应FR** 做对比，主要由下面几种情况：**frold**和**frnew**均存在、frold存在但frnew不存在，frold不存在但frnew存在。下面的if划分和上面的略有不同：
 
-1、如果`frold不为空&&（frnew为空||frold.start<frnew.start||frold.start=frnew.start）&&frold!=frnew`    这种情况是新旧view的地址范围不一样，则需要调用lienter的region_del对frold进行删除。
+1、如果`frold不为空&&（frnew为空||frold.start<frnew.start||frold.start=frnew.start）&&frold!=frnew`: 这种情况是**新旧view的地址范围不一样**，则需要调用lienter的`region_del`对**frold进行删除！！！**。
 
-2、如果`frold和frnew均不为空且frold.start=frnew.start`      这种情况需要判断日志掩码，如果frold->dirty_log_mask && !frnew->dirty_log_mask，调用log_stop回调函数；如果frnew->dirty_log_mask && !frold->dirty_log_mask，调用log_start回调函数。
+2、如果`frold和frnew均不为空且frold.start=frnew.start`: 这种情况需要判断**日志掩码**，如果`frold->dirty_log_mask && !frnew->dirty_log_mask`，调用log_stop回调函数；如果`frnew->dirty_log_mask && !frold->dirty_log_mask`，调用log_start回调函数。
 
-3、frold为空但是frnew不为空      这种情况直接调用region_add回调函数添加region。
+3、frold为空但是frnew不为空: 这种情况直接调用region_add回调函数**添加region**。
 
-函数主体逻辑基本如上所述，那我们注意到，当adding为false时，执行的只有第一个情况下的处理，就是删除frold的操作，其余的处理只有在adding 为true的时候才得以执行。这意图就比较明确，首次执行先删除多余的，下次直接添加或者对日志做更新操作了。
-
+函数主体逻辑基本如上所述，那我们注意到，当**adding为false**时，执行的**只有第一个情况**下的处理，就是删除frold的操作，其余的处理只有在adding 为true的时候才得以执行。这意图就比较明确，**首次执行先删除多余的**，下次**直接添加**或者**对日志做更新操作**了。
 
 会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
 
-# 5. 新FlatRange的更新
+# 5. MEMORY_LISTENER_UPDATE_REGION(): 新FlatRange的更新
 
 对于要添加的FR，调用了 `MEMORY_LISTENER_UPDATE_REGION(x)`
 
@@ -1468,6 +1469,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
         MEMORY_LISTENER_CALL(as, callback, dir, &mrs, ##_args);         \
     } while(0)
 
+// 将flatview转换成MemoryRegionSection
 static inline MemoryRegionSection
 section_from_flat_range(FlatRange *fr, FlatView *fv)
 {
@@ -1486,24 +1488,21 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 该宏实际上是另一个宏`MEMORY_LISTENER_CALL`的封装，在`MEMORY_LISTENER_CALL`中临时生成一个`MemoryRegionSection`结构，具体逻辑如下
 
 ```cpp
-#define MEMORY_LISTENER_CALL(_callback, _direction, _section, _args...) \
+#define MEMORY_LISTENER_CALL(_as, _callback, _direction, _section, _args...) \
     do {                                                                \
         MemoryListener *_listener;                                      \
                                                                         \
         switch (_direction) {                                           \
         case Forward:                                                   \
-            QTAILQ_FOREACH(_listener, &memory_listeners, link) {        \
-                if (_listener->_callback                                \
-                    && memory_listener_match(_listener, _section)) {    \
+            QTAILQ_FOREACH(_listener, &(_as)->listeners, link_as) {     \
+                if (_listener->_callback) {                             \
                     _listener->_callback(_listener, _section, ##_args); \
                 }                                                       \
             }                                                           \
             break;                                                      \
         case Reverse:                                                   \
-            QTAILQ_FOREACH_REVERSE(_listener, &memory_listeners,        \
-                                   memory_listeners, link) {            \
-                if (_listener->_callback                                \
-                    && memory_listener_match(_listener, _section)) {    \
+            QTAILQ_FOREACH_REVERSE(_listener, &(_as)->listeners, link_as) { \
+                if (_listener->_callback) {                             \
                     _listener->_callback(_listener, _section, ##_args); \
                 }                                                       \
             }                                                           \
