--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -326,7 +326,7 @@ FlatView管理 MR 展开后得到的所有 FlatRange .
 // memory.c
 struct AddrRange {
     // GPA 虚拟机物理地址空间
-    Int128 start; // 起始
+    Int128 start; // 在虚拟机地址空间的起始地址
     Int128 size; // 大小
 };
 
