--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1392,7 +1392,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
             frold = NULL;
         }
         if (inew < new_view->nr) {
-            // 
+            // flatrange数组
             frnew = &new_view->ranges[inew];
         } else {
             frnew = NULL;
@@ -1476,10 +1476,10 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
     return (MemoryRegionSection) {
         .mr = fr->mr,
         .fv = fv,
-        .offset_within_region = fr->offset_in_region,
-        .size = fr->addr.size,
-        .offset_within_address_space = int128_get64(fr->addr.start),
-        .readonly = fr->readonly,
+        .offset_within_region = fr->offset_in_region, // 在mr中的offset
+        .size = fr->addr.size, // 大小
+        .offset_within_address_space = int128_get64(fr->addr.start), // 在虚拟机地址空间的起始地址
+        .readonly = fr->readonly, // 是否可写
         .nonvolatile = fr->nonvolatile,
     };
 }
@@ -1642,6 +1642,34 @@ out:
 主要是一些基础工作，获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
 获取section的start_addr和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
+
+```cpp
+/*
+ * Calculate and align the start address and the size of the section.
+ * Return the size. If the size is 0, the aligned section is empty.
+ */
+static hwaddr kvm_align_section(MemoryRegionSection *section,
+                                hwaddr *start)
+{
+    // 内存大小
+    hwaddr size = int128_get64(section->size);
+    hwaddr delta, aligned;
+
+    /* kvm works in page size chunks, but the function may be called
+       with sub-page size and unaligned start address. Pad the start
+       address to next and truncate size to previous page boundary. */
+    aligned = ROUND_UP(section->offset_within_address_space,
+                       qemu_real_host_page_size);
+    // 
+    delta = aligned - section->offset_within_address_space;
+    *start = aligned;
+    if (delta > size) {
+        return 0;
+    }
+
+    return (size - delta) & qemu_real_host_page_mask;
+}
+```
 
 如果对应的MR关联的内存并不是作为ram存在，就要进行额外的验证。这种情况如果writeable允许写操作或者kvm不支持只读内存，那么直接返回。
 
