--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1478,7 +1478,7 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
         .fv = fv,
         .offset_within_region = fr->offset_in_region, // 在mr中的offset
         .size = fr->addr.size, // 大小
-        .offset_within_address_space = int128_get64(fr->addr.start), // 在虚拟机地址空间的起始地址
+        .offset_within_address_space = int128_get64(fr->addr.start), // 在虚拟机物理地址空间的起始地址, GPA
         .readonly = fr->readonly, // 是否可写
         .nonvolatile = fr->nonvolatile,
     };
@@ -1567,6 +1567,7 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
         }
     }
     // 得到section的start address和size, 对齐后的结果
+    // start_addr是该段内存的起始地址, GPA, 虚拟机物理地址
     size = kvm_align_section(section, &start_addr);
     if (!size) {
         return;
@@ -1658,15 +1659,18 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
     /* kvm works in page size chunks, but the function may be called
        with sub-page size and unaligned start address. Pad the start
        address to next and truncate size to previous page boundary. */
+    // 将在地址空间的偏移位置对齐到qemu_real_host_page_size, 
+    // ROUND_UP(9,2)=10, 本来位置9改成对齐到位置10
     aligned = ROUND_UP(section->offset_within_address_space,
                        qemu_real_host_page_size);
-    // 
+    // 减去原大小, 得到偏移
     delta = aligned - section->offset_within_address_space;
+    // start等于地址空间起始地址的对齐结果
     *start = aligned;
     if (delta > size) {
         return 0;
     }
-
+    // 返回size
     return (size - delta) & qemu_real_host_page_mask;
 }
 ```
