--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1613,7 +1613,9 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
         // 生成新的slot并初始化
         mem = kvm_alloc_slot(kml);
         mem->memory_size = slot_size;
+        // start_addr是该段内存的起始地址, GPA, 虚拟机物理地址
         mem->start_addr = start_addr;
+        // 主机虚拟地址, HVA, qemu分配的
         mem->ram = ram;
         mem->flags = kvm_mem_flags(mr);
 
@@ -1672,6 +1674,33 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
     }
     // 返回size
     return (size - delta) & qemu_real_host_page_mask;
+}
+```
+
+计算HVA, 主机虚拟地址,
+
+```cpp
+ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
+          (start_addr - section->offset_within_address_space);
+```
+
+```cpp
+void *memory_region_get_ram_ptr(MemoryRegion *mr)
+{
+    void *ptr;
+    uint64_t offset = 0;
+
+    RCU_READ_LOCK_GUARD();
+    while (mr->alias) {
+        offset += mr->alias_offset;
+        mr = mr->alias;
+    }
+    // ram_block 不能为空, 否则退出
+    assert(mr->ram_block);
+    // 
+    ptr = qemu_map_ram_ptr(mr->ram_block, offset);
+
+    return ptr;
 }
 ```
 
