--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1680,26 +1680,29 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
 计算HVA, 主机虚拟地址,
 
 ```cpp
+// 
 ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
           (start_addr - section->offset_within_address_space);
 ```
 
 ```cpp
+// 
 void *memory_region_get_ram_ptr(MemoryRegion *mr)
 {
     void *ptr;
     uint64_t offset = 0;
-
     RCU_READ_LOCK_GUARD();
     while (mr->alias) {
+        // 别名mr在真实mr中的偏移
         offset += mr->alias_offset;
+        // 找到真实的mr
         mr = mr->alias;
     }
     // ram_block 不能为空, 否则退出
     assert(mr->ram_block);
-    // 
+    // 返回block->host + offset, qemu分配的内存 + 偏移
+    // offset是查找的mr在真实的mr中偏移, alias不与ram_block关联, 返回qemu分配的整个内存的一部分(属于该mr的)的起始地址, HVA
     ptr = qemu_map_ram_ptr(mr->ram_block, offset);
-
     return ptr;
 }
 ```
