--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1567,7 +1567,7 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
         }
     }
     // 得到section的start address和size, 对齐后的结果
-    // start_addr是该段内存的起始地址, GPA, 虚拟机物理地址
+    // start_addr是该段内存<fr/section>的起始地址, GPA, 虚拟机物理地址
     size = kvm_align_section(section, &start_addr);
     if (!size) {
         return;
@@ -1680,7 +1680,8 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
 计算HVA, 主机虚拟地址,
 
 ```cpp
-// 
+// 该section/fr所属的mr在分配的主机虚拟地址中的偏移(HVA) + 该块(section/fr)在所属mr中的偏移 + 
+// 该块<fr/section>在虚拟机地址空间的起始地址, GPA, 虚拟机物理地址
 ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
           (start_addr - section->offset_within_address_space);
 ```
