--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1567,12 +1567,14 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
         }
     }
     // 得到section的start address和size, 对齐后的结果
-    // start_addr是该段内存<fr/section>的起始地址, GPA, 虚拟机物理地址
+    // start_addr是该段内存<fr/section>在虚拟机地址空间的的起始地址, GPA, 虚拟机物理地址
     size = kvm_align_section(section, &start_addr);
     if (!size) {
         return;
     }
-    // 获取ram(HVA)地址, ??
+    // 该section/fr所属的mr在分配的主机虚拟地址中的偏移(HVA) + 该块(section/fr)在所属mr中的偏移 + 
+    // 该块<fr/section>在虚拟机地址空间的起始地址(GPA)的对齐结果 - 该块<fr/section>在虚拟机地址空间的起始地址(GPA) 
+    // 后面这个是对齐的偏差
     /* use aligned delta to align the ram address */
     ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
           (start_addr - section->offset_within_address_space);
@@ -1644,7 +1646,7 @@ out:
 
 主要是一些基础工作，获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
-获取section的start_addr和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
+获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
 
 ```cpp
 /*
@@ -1681,7 +1683,7 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
 
 ```cpp
 // 该section/fr所属的mr在分配的主机虚拟地址中的偏移(HVA) + 该块(section/fr)在所属mr中的偏移 + 
-// 该块<fr/section>在虚拟机地址空间的起始地址, GPA, 虚拟机物理地址
+// 该块<fr/section>在虚拟机地址空间的起始地址(GPA)的对齐结果 - 该块<fr/section>在虚拟机地址空间的起始地址(GPA)
 ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
           (start_addr - section->offset_within_address_space);
 ```
