--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -481,6 +481,7 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
 
     qemu_mutex_lock_ramlist();
     // 在虚拟机物理地址空间的偏移
+    // 在虚拟机物理地址空间分配空间
     new_block->offset = find_ram_offset(new_block->max_length);
     // 还没分配, 所以会进入
     if (!new_block->host) {
