--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
+++ b/Virtualization/QEMU/4. memory/2. 主要结构体分析.md
@@ -153,8 +153,7 @@ struct MemoryRegion {
     MemoryRegion *container;
     // mr的大小  
     Int128 size;
-    //在AddressSpace中的地址, GPA
-    // 相对父mr的偏移，起始GPA=base+addr 可以去源码中搜索一下如何初始化的就明白了
+    // 相对父mr的偏移，起始GPA=父MR base+addr 可以去源码中搜索一下如何初始化的就明白了
     hwaddr addr;
     void (*destructor)(MemoryRegion *mr);
     uint64_t align;
