--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -686,7 +686,7 @@ static void memory_region_add_subregion_common(MemoryRegion *mr,
     assert(!subregion->container);
     // container为system_memory
     subregion->container = mr;
-    // addr 是在AddressSpace中的地址, GPA, 
+    // addr 是在父MR中的偏移, GPA
     subregion->addr = offset;
     memory_region_update_container_subregions(subregion);
 }
