--- a/Hided/Container/Docker/Series/基础教程/1. Docker入门基础.md
+++ b/Hided/Container/Docker/Series/基础教程/1. Docker入门基础.md
@@ -259,7 +259,7 @@ quay.io | quay.azk8s.cn | `quay.azk8s.cn/<repo-name>/<image-name>:<version>` | `
 ### 7.1.1. Linux修改
 
 Ubuntu 16.04+、Debian 8+、CentOS 7
-对于使用 systemd 的系统，请在 /etc/docker/daemon.json 中写入如下内容（如果文件不存在请新建该文件）
+对于使用 systemd 的系统，请在 `/etc/docker/daemon.json` 中写入如下内容（如果文件不存在请新建该文件）
 
 ```json
 {
