--- Auto-Git Commit ---

--- a/Hided/Container/Docker/Series/基础教程/1. Docker入门基础.md
+++ b/Hided/Container/Docker/Series/基础教程/1. Docker入门基础.md
@@ -525,7 +525,7 @@ $ docker container kill [containID]/[container_name]
 [root@xxx ~]# docker rm container_name/container_id
 ```
 
-运行上面的命令之后，再使用docker container ls \-\-all命令，就会发现被删除的容器文件已经消失了。
+运行上面的命令之后，再使用`docker container ls --all`命令，就会发现被删除的容器文件已经消失了。
 
 # 9. 仓库以及相关操作
 
