--- Auto-Git Commit ---

--- a/Tools/GitHub和GitLab/代码库同步.md
+++ b/Tools/GitHub和GitLab/代码库同步.md
@@ -1,5 +1,5 @@
 
-# GitLab自动同步到GitHub
+# GitLab -> GitHub
 
 大致需要三步
 
@@ -47,6 +47,17 @@ https://github.com/haiwei-li/test.git
 https://haiwei-li@github.com/haiwei-li/test.git
 ```
 
-密码处 填写的就是上面获取的token。
+Mirror direction 填写 Push
+
+Authentication method 选择 PassWord; 当然如果选择SSH public key, 下面就填写已添加到GitHub的ssh public key, 然后上面的URL就可以直接使用`git@gitlab.com:haiwei-li/test.git`.
+
+密码处填写的就是上面获取的token。
 
 如果github中创建的是公有的仓库，可以尝试自己的**github的登录密码**填写此处，以或许更多更完整的权限
+
+最后可以测试一下
+
+# GitHub -> GitLab
+
+这个方向很简单，只需要上面第一模块在github上生成的token。
+
