--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -7,7 +7,7 @@
 - [2. 回调函数的注册](#2-回调函数的注册)
 - [3. 全局的系统AS和MR的初始化: 不分配GPA/HVA](#3-全局的系统as和mr的初始化-不分配gpahva)
   - [3.1. address_space_init(): 整个AS初始化](#31-address_space_init-整个as初始化)
-- [4. 实际内存的分配GPA/HVA](#4-实际内存的分配gpahva)
+- [4. 虚拟机实际内存的分配GPA/HVA](#4-虚拟机实际内存的分配gpahva)
   - [4.1. 分配内存(pc.ram, pc.rom): memory_region_allocate_system_memory](#41-分配内存pcram-pcrom-memory_region_allocate_system_memory)
     - [4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存](#411-memory_region_init_ram-创建ramblock并从host上分配虚拟内存)
     - [4.1.2. vmstate_register_ram_global(): ramblock与mr关联](#412-vmstate_register_ram_global-ramblock与mr关联)
@@ -218,9 +218,11 @@ void address_space_init(AddressSpace *as, MemoryRegion *root, const char *name)
 
 针对系统内核、系统IO的MR和AS的初始化， 但是并不分配GPA/HVA, MR和AS都是全局的
 
-# 4. 实际内存的分配GPA/HVA
+# 4. 虚拟机实际内存的分配GPA/HVA
 
 前面**注册listener**也好，或是初始化addressspace也好，实际上均**没有对应的物理内存**。
+
+在虚拟机的创建与运行中`pc_init_pci`负责在**qemu中初始化虚拟机**，**内存初始化**也是在这里完成的，还是一步步从qemu说起，在vl.c的main函数中有`ram_size`参数，由qemu入参标识`QEMU_OPTION_m`设定，顾名思义就是**虚拟机内存的大小**，通过`machine->init`一步步传递给`pc_init1`函数。在这里分出了`above_4g_mem_size`和`below_4g_mem_size`，即**高低端内存**（也**不一定是32bit机器**..），然后开始**初始化内存**，即`pc_memory_init`，内存通过`memory_region_init_ram`下面的`qemu_ram_alloc`分配，使用`qemu_ram_alloc_from_ptr`。
 
 顺着main函数往下走，会调用到`machine—>init`，实际上对应于`pc_init1`函数，在该函数中有`pc_memory_init()`函数对实际的内存做了分配。
 
