--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -392,6 +392,8 @@ memory_region_allocate_system_memory()
 
 ### 4.1.1. memory_region_init_ram: 创建ramblock并从host上分配虚拟内存
 
+qemu对内存条的模拟管理，是通过`RAMBlock`和`ram_list`管理的，**RAMBlock**就是**每次申请的内存池**，`ram_list`则是RAMBlock的**链表**
+
 ```cpp
 void memory_region_init_ram_shared_nomigrate(MemoryRegion *mr,
                                              Object *owner,
