--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -562,7 +562,9 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
 
 本部分最重要的莫过于**设置其host**了，其对应的**宿主机虚拟地址空间！！！** 的**虚拟地址**。在支持**大页**的情况下调用`file_ram_alloc()`函数进行分配，否则调用`phys_mem_alloc()`函数进行分配。二者分配其实都是利用**mmap**分配的，但是在支持大页的情况下需要传递参数`mem_path`,所以需要两个函数。
 
-在**非大页**的情况下，分配好内存尝试**和相邻的block合并**下。最后把block插入到全局的链表`ram_list`中，只是block保持**从大到小**的顺序。
+在**非大页**的情况下，分配好内存尝试**和相邻的block合并**下。
+
+最后把block插入到**全局的链表**`ram_list`中，只是block保持**从大到小**的顺序。
 
 ### 4.1.2. vmstate_register_ram_global(): ramblock与mr关联
 
