--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -546,6 +546,7 @@ static void ram_block_add(RAMBlock *new_block, Error **errp, bool shared)
 
     if (new_block->host) {
         qemu_ram_setup_dump(new_block->host, new_block->max_length);
+        // 使用madvise对内存使用限定
         qemu_madvise(new_block->host, new_block->max_length, QEMU_MADV_HUGEPAGE);
         /* MADV_DONTFORK is also needed by KVM in absence of synchronous MMU */
         qemu_madvise(new_block->host, new_block->max_length, QEMU_MADV_DONTFORK);
@@ -585,6 +586,8 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 `vmstate_register_ram_global`这个函数则是负责将前面提到的ramlist中的**ramblock**和**memory region**的初始地址对应一下，将`mr->name`填充到ramblock的**idstr**里面，就是让二者有确定的对应关系，如此**mr**就有了**物理内存**使用。
 
 ## 4.2. 将整体mr(pc.ram)划分为两个子MR(subregion): 不再申请内存, 即不关联host虚拟内存(HVA)
+
+此时`pc.ram`已经分配完成，`ram_addr`已经拿到了分配的内存地址，MemoryRegion ram初始化完成。
 
 在创建好了ram并且分配好了空间之后，创建了**两个mr alias**，`ram_below_4g`以及`ram_above_4g`，这两个mr分别指向**ram的低4g**以及**高4g空间**，这两个alias是挂在**根system\_memory mr下面**的, 即高低端内存（也不一定是32bit机器）
 
