--- a/Virtualization/KVM/4. 内存虚拟化/内存虚拟化.md
+++ b/Virtualization/KVM/4. 内存虚拟化/内存虚拟化.md
@@ -58,7 +58,7 @@ void *qemu_memalign(size_t alignment, size_t size)
 
 然后一层层的退回到`pc_memory_init`函数。
 
-此时`pc.ram`已经分配完成，`ram_addr`已经拿到了分配的内存地址，MemoryRegion ram初始化完成。下面则是对已有的ram进行分段，即`ram-below-4g`和`ram-above-4g`，也就是高端内存和低端内存。用`memory_region_init_alias`初始化子MemoryRegion，然后将`memory_region_add_subregion`添加**关联起来**，`memory_region_add_subregion`具体细节“KVM源码分析2”中已经说了，参考对照着看吧，中间很多**映射代码过程**也只是qemu遗留的软件实现，没看到具体存在的意义，直接看到`kvm_set_user_memory_region`函数，内核真正需要`kvm_vm_ioctl`传递过去的参数是什么， `struct kvm_userspace_memory_region mem`而已，也就是
+下面则是对已有的ram进行分段，即`ram-below-4g`和`ram-above-4g`，也就是高端内存和低端内存。用`memory_region_init_alias`初始化子MemoryRegion，然后将`memory_region_add_subregion`添加**关联起来**，`memory_region_add_subregion`具体细节“KVM源码分析2”中已经说了，参考对照着看吧，中间很多**映射代码过程**也只是qemu遗留的软件实现，没看到具体存在的意义，直接看到`kvm_set_user_memory_region`函数，内核真正需要`kvm_vm_ioctl`传递过去的参数是什么， `struct kvm_userspace_memory_region mem`而已，也就是
 
 ```cpp
 struct kvm_userspace_memory_region {
