--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -591,6 +591,8 @@ void vmstate_register_ram(MemoryRegion *mr, DeviceState *dev)
 
 在创建好了ram并且分配好了空间之后，创建了**两个mr alias**，`ram_below_4g`以及`ram_above_4g`，这两个mr分别指向**ram的低4g**以及**高4g空间**，这两个alias是挂在**根system\_memory mr下面**的, 即高低端内存（也不一定是32bit机器）
 
+然后将`memory_region_add_subregion`添加**关联起来**.
+
 ### 4.2.1. 计算above_4g_mem_size和below_4g_mem_size
 
 对于 `x86_64`, 需要给system io留0.5G内存, 检查虚拟机内存是否大于4G(ram_size是否大于3.5G), 计算如下
@@ -1548,7 +1550,7 @@ static void kvm_region_del(MemoryListener *listener,
 
 `kvm_region_add()`函数是核心listener的添加region的函数，在qemu申请好内存后，针对**每个FR**，调用了listener的`region_add函数`。最终需要利用此函数把**region信息**告知**KVM**，KVM以此对内存信息做记录。
 
-## 5.1. kvm_set_phys_mem():
+## 5.1. kvm_set_phys_mem(): 
 
 咱们直奔主题，函数核心在`static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)`函数中，QEMU通过该函数修改虚拟机注册在内核中的内存, 达到为虚拟机添加/删除/移动内存的目的.
 
@@ -1871,7 +1873,7 @@ static int kvm_set_user_memory_region(KVMMemoryListener *kml, KVMSlot *slot, boo
 
 如图所示，old region是找到的和new region重叠的slot，首次删除把整个slot都删除了，造成了region1部门很无辜的受伤，所以在映射时，要把region1在弥补上。而黑色部分就是实际删除的，这样接下来就可以直接映射new region了，如果多余的部分在后方，也是同样的道理。在把无辜被删除region映射之后，接下来就调用kvm_set_user_memory_region把new slot映射进去。基本思路就是这样。
 
-下面看下核心函数kvm_set_user_memory_region
+下面看下核心函数`kvm_set_user_memory_region`
 
 
 ```cpp
@@ -1888,7 +1890,7 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
     if (s->migration_log) {
         mem.flags |= KVM_MEM_LOG_DIRTY_PAGES;
     }
-
+    // 只读的mem
     if (slot->memory_size && mem.flags & KVM_MEM_READONLY) {
         /* Set the slot size to 0 before setting the slot to the desired
          * value. This is needed based on KVM commit 75d61fbc. */
@@ -1901,7 +1903,12 @@ static int kvm_set_user_memory_region(KVMState *s, KVMSlot *slot)
 }
 ```
 
-可以看到该函数实现也并不复杂，使用了一个`kvm_userspace_memory_region`对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是**只读的mem**, 需要**调用两次**kvm_vm_ioctl，第一次设置mem的size为0. 至于为何这么做，可以参考KVM端说明, KVM接收端在`kvm_vm_ioctl()`函数中.
+可以看到该函数实现也并不复杂，使用了一个`kvm_userspace_memory_region`对应，该结构本质上作为参数传递给KVM，只是由于不能共享堆栈，在KVM中需要把该结构复制到内核空间，代码本身没什么难度，只是这里如果是**只读的mem**, 需要**调用两次**kvm_vm_ioctl，第一次设置mem的size为0. 
+
+至于为何这么做，可以参考KVM端说明, KVM接收端在`kvm_vm_ioctl()`函数中.
+
+
+
 
 ```cpp
 ……
