--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -770,6 +770,7 @@ static void address_space_update_topology(AddressSpace *as)
         // 核心函数, 基于root MR生成 flatview
         generate_memory_topology(physmr);
     }
+    // 更新as的flatview
     address_space_set_flatview(as);
 }
 ```
@@ -1338,7 +1339,7 @@ static void address_space_set_flatview(AddressSpace *as)
     }
     // 下面逻辑是新旧flatview不等
 
-    // 旧的引用计数 + 1
+    // 旧的非空则引用计数 + 1
     if (old_view) {
         flatview_ref(old_view);
     }
@@ -1348,7 +1349,8 @@ static void address_space_set_flatview(AddressSpace *as)
 
     if (!QTAILQ_EMPTY(&as->listeners)) {
         FlatView tmpview = { .nr = 0 }, *old_view2 = old_view;
-        // 要么为0, 要么就使用之前的flatview
+        // 旧的fv是空的, 则旧fv使用一个fr数目为0的fv
+        // 要不然就用旧的fv
         if (!old_view2) {
             old_view2 = &tmpview;
         }
@@ -1378,9 +1380,17 @@ static void address_space_set_flatview(AddressSpace *as)
 }
 ```
 
-在获取了**新旧两个FlatView**之后，调用了**两次**`address_space_update_topology_pass()`函数，首次调用重在**删除原来的**，而后者重在**添加**。之后设置`as->current_map = new_view`。并对`old_view`**减少引用**，当**引用计数为1**时会**被删除**。
+在获取了**新旧两个FlatView**之后，调用了**两次**`address_space_update_topology_pass()`函数，首次调用重在**删除原来的**，而后者重在**添加**。
 
-接下来重点在两个地方：1、如何根据一个MR获取对应的FlatView；2、如何对旧的FlatView进行更新。
+之后设置`as->current_map = new_view`。
+
+对`old_view`**减少引用**，当**引用计数为1**时会**被删除**。
+
+接下来重点在两个地方：
+
+1、如何根据一个MR获取对应的FlatView；
+
+2、如何对旧的FlatView进行更新。
 
 ```cpp
 static void address_space_update_topology_pass(AddressSpace *as,
