--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1405,6 +1405,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
      * Kill ranges in the old map, and instantiate ranges in the new map.
      */
     iold = inew = 0;
+    // 循环条件是old_view->nr和new_view->nr, 即新旧view的可用fr数目
     while (iold < old_view->nr || inew < new_view->nr) {
         if (iold < old_view->nr) {
             frold = &old_view->ranges[iold];
@@ -1464,7 +1465,9 @@ static void address_space_update_topology_pass(AddressSpace *as,
 }
 ```
 
-该函数倒是不长，主体是一个while循环，循环条件是`old_view->nr`和`new_view->nr`,表示**新旧view**的**可用FlatRange数目**。这里依次对**FR数组**的**对应FR** 做对比，主要由下面几种情况：**frold**和**frnew**均存在、frold存在但frnew不存在，frold不存在但frnew存在。下面的if划分和上面的略有不同：
+该函数倒是不长，主体是一个while循环，循环条件是`old_view->nr`和`new_view->nr`,表示**新旧view**的**可用FlatRange数目**。这里依次对**FR数组**的**对应FR** 做对比，主要由下面几种情况：**frold**和**frnew**均存在、frold存在但frnew不存在，frold不存在但frnew存在。
+
+下面的if划分和上面的略有不同：
 
 1、如果`frold不为空&&（frnew为空||frold.start<frnew.start||frold.start=frnew.start）&&frold!=frnew`: 这种情况是**新旧view的地址范围不一样**，则需要调用lienter的`region_del`对**frold进行删除！！！**。
 
@@ -1472,7 +1475,7 @@ static void address_space_update_topology_pass(AddressSpace *as,
 
 3、frold为空但是frnew不为空: 这种情况直接调用region_add回调函数**添加region**。
 
-函数主体逻辑基本如上所述，那我们注意到，当**adding为false**时，执行的**只有第一个情况**下的处理，就是删除frold的操作，其余的处理只有在adding 为true的时候才得以执行。这意图就比较明确，**首次执行先删除多余的**，下次**直接添加**或者**对日志做更新操作**了。
+函数主体逻辑基本如上所述，那我们注意到，当**adding为false**时，执行的**只有第一个情况**下的处理，就是删除frold的操作，其余的处理只有在**adding 为true**的时候才得以执行。这意图就比较明确，**首次执行先删除多余的**，下次**直接添加**或者**对日志做更新操作**了。
 
 会调用`MEMORY_LISTENER_UPDATE_REGION()`**提交本次修改**
 
@@ -1533,7 +1536,11 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
     } while (0)
 ```
 
-这里有个`_direction`，其实就是**遍历方向**，因为**listener**按照**优先级**从**低到高**排列，所以这里其实就是确定让谁先处理。Forward就是从前向后，而reverse就是从后向前。还有一个值得注意的是`memory_listener_match`函数，**listener**有着**对应的AddressSpace**，会在其 `address_space_filter` 域指定，注意如果**没有指定AddressSpace**，那么该listener对**所有AddressSpace均适用**，否则**只适用于其指定的AddressSpace**。知道这些，看这些代码就不成问题了。
+这里有个`_direction`，其实就是**遍历方向**，因为**listener**按照**优先级**从**低到高**排列，所以这里其实就是**确定让谁先处理**。
+
+**Forward**就是**从前向后**，而**reverse**就是**从后向前**。
+
+还有一个值得注意的是`memory_listener_match`函数，**listener**有着**对应的AddressSpace**，会在其 `address_space_filter` 域指定，注意如果**没有指定AddressSpace**，那么该listener对**所有AddressSpace均适用**，否则**只适用于其指定的AddressSpace**。知道这些，看这些代码就不成问题了。
 
 这样`kvm_region_add()`函数得到执行，那咱们就从`kvm_region_add`函数开始，对KVM部分的内存管理做介绍。
 
