--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1716,7 +1716,7 @@ ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
 ```
 
 ```cpp
-// 
+// 返回该mr在qemu实际分配的内存的偏移(因为可能是alias)
 void *memory_region_get_ram_ptr(MemoryRegion *mr)
 {
     void *ptr;
