--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1671,9 +1671,11 @@ out:
 }
 ```
 
-主要是一些基础工作，获取**section对应的MR**的一些属性，如writeable、readonly_flag。
+获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
-获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
+如果对应的MR关联的内存并**不是作为ram存在**，就要进行额外的验证。这种情况如果**writeable**允许写操作或者kvm不支持只读内存，那么直接返回。
+
+然后获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
 
 ```cpp
 /*
@@ -1706,7 +1708,7 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
 }
 ```
 
-计算HVA, 主机虚拟地址,
+再计算HVA, 主机虚拟地址,
 
 ```cpp
 // 该section/fr所属的mr在分配的主机虚拟地址中的偏移(HVA) + 该块(section/fr)在所属mr中的偏移 + 
@@ -1716,7 +1718,7 @@ ram = memory_region_get_ram_ptr(mr) + section->offset_within_region +
 ```
 
 ```cpp
-// 返回该mr在qemu实际分配的内存的偏移(因为可能是alias)
+// 返回该mr实际映射的主机虚拟机地址(因为可能是alias, 所以要加上offset)
 void *memory_region_get_ram_ptr(MemoryRegion *mr)
 {
     void *ptr;
@@ -1736,8 +1738,6 @@ void *memory_region_get_ram_ptr(MemoryRegion *mr)
     return ptr;
 }
 ```
-
-如果对应的MR关联的内存并不是作为ram存在，就要进行额外的验证。这种情况如果writeable允许写操作或者kvm不支持只读内存，那么直接返回。
 
 接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。进入while循环
 
