--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -22,6 +22,8 @@
       - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. MEMORY_LISTENER_UPDATE_REGION(): 新FlatRange的更新](#5-memory_listener_update_region-新flatrange的更新)
   - [5.1. kvm_set_phys_mem():](#51-kvm_set_phys_mem)
+    - [基本检查](#基本检查)
+    - [得到section的起始地址和大小](#得到section的起始地址和大小)
 - [6. 总结](#6-总结)
 - [7. 参考](#7-参考)
 
@@ -1584,7 +1586,7 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
     void *ram;
     // 如果不是ram, 则不能写操作
     if (!memory_region_is_ram(mr)) {
-        // 不可写 或 kvm不支持只读内存, 直接返回
+        // 可写 或 kvm不支持只读内存, 直接返回
         if (writeable || !kvm_readonly_mem_allowed) {
             return;
         } else if (!mr->romd_mode) {
@@ -1671,11 +1673,15 @@ out:
 }
 ```
 
+### 基本检查
+
 获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
-如果对应的MR关联的内存并**不是作为ram存在**，就要进行额外的验证。这种情况如果**writeable**允许写操作或者kvm不支持只读内存，那么直接返回。
+如果对应的MR关联的内存并**不是作为ram存在**，就要进行额外的验证。这种情况如果**writeable**允许写操作或者**kvm不支持只读内存**，那么**直接返回**。
 
-然后获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作 。
+### 得到section的起始地址和大小
+
+然后获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作。
 
 ```cpp
 /*
