--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -21,7 +21,7 @@
       - [4.3.1.1. generate_memory_topology(mr): 根据给定的mr生成新的Flatview](#4311-generate_memory_topologymr-根据给定的mr生成新的flatview)
       - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. MEMORY_LISTENER_UPDATE_REGION(): 新FlatRange的更新](#5-memory_listener_update_region-新flatrange的更新)
-  - [5.1. kvm_set_phys_mem():](#51-kvm_set_phys_mem)
+  - [5.1. kvm_set_phys_mem(): 修改内核内存](#51-kvm_set_phys_mem-修改内核内存)
     - [基本检查](#基本检查)
     - [得到section的起始地址和大小](#得到section的起始地址和大小)
 - [6. 总结](#6-总结)
@@ -1510,6 +1510,8 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 }
 ```
 
+其中`address_space_to_flatview`会返回as的`current_map`
+
 该宏实际上是另一个宏`MEMORY_LISTENER_CALL`的封装，在`MEMORY_LISTENER_CALL`中临时生成一个`MemoryRegionSection`结构，具体逻辑如下
 
 ```cpp
@@ -1544,7 +1546,7 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 
 还有一个值得注意的是`memory_listener_match`函数，**listener**有着**对应的AddressSpace**，会在其 `address_space_filter` 域指定，注意如果**没有指定AddressSpace**，那么该listener对**所有AddressSpace均适用**，否则**只适用于其指定的AddressSpace**。知道这些，看这些代码就不成问题了。
 
-这样`kvm_region_add()`函数得到执行，那咱们就从`kvm_region_add`函数开始，对KVM部分的内存管理做介绍。
+这样`kvm_region_add()`函数得到执行。
 
 ```cpp
 static void kvm_region_add(MemoryListener *listener,
@@ -1569,7 +1571,7 @@ static void kvm_region_del(MemoryListener *listener,
 
 `kvm_region_add()`函数是核心listener的添加region的函数，在qemu申请好内存后，针对**每个FR**，调用了listener的`region_add函数`。最终需要利用此函数把**region信息**告知**KVM**，KVM以此对内存信息做记录。
 
-## 5.1. kvm_set_phys_mem(): 
+## 5.1. kvm_set_phys_mem(): 修改内核内存
 
 咱们直奔主题，函数核心在`static void kvm_set_phys_mem(MemoryRegionSection *section, bool add)`函数中，QEMU通过该函数修改虚拟机注册在内核中的内存, 达到为虚拟机添加/删除/移动内存的目的.
 
