--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -22,8 +22,8 @@
       - [4.3.1.2. address_space_set_flatview(): 设置as的FlatView, 会调用KVM](#4312-address_space_set_flatview-设置as的flatview-会调用kvm)
 - [5. MEMORY_LISTENER_UPDATE_REGION(): 新FlatRange的更新](#5-memory_listener_update_region-新flatrange的更新)
   - [5.1. kvm_set_phys_mem(): 修改内核内存](#51-kvm_set_phys_mem-修改内核内存)
-    - [基本检查](#基本检查)
-    - [得到section的起始地址和大小](#得到section的起始地址和大小)
+    - [属性检查](#属性检查)
+    - [kvm_align_section(): 得到section的起始地址和大小](#kvm_align_section-得到section的起始地址和大小)
 - [6. 总结](#6-总结)
 - [7. 参考](#7-参考)
 
@@ -1467,7 +1467,9 @@ static void address_space_update_topology_pass(AddressSpace *as,
 }
 ```
 
-该函数倒是不长，主体是一个while循环，循环条件是`old_view->nr`和`new_view->nr`,表示**新旧view**的**可用FlatRange数目**。这里依次对**FR数组**的**对应FR** 做对比，主要由下面几种情况：**frold**和**frnew**均存在、frold存在但frnew不存在，frold不存在但frnew存在。
+该函数倒是不长，主体是一个**while循环**，循环条件是`old_view->nr`和`new_view->nr`,表示**新旧view**的**可用FlatRange数目**。
+
+这里依次对**FR数组**的**对应FR** 做对比，主要由下面几种情况：**frold**和**frnew**均存在、frold存在但frnew不存在，frold不存在但frnew存在。
 
 下面的if划分和上面的略有不同：
 
@@ -1510,7 +1512,7 @@ section_from_flat_range(FlatRange *fr, FlatView *fv)
 }
 ```
 
-其中`address_space_to_flatview`会返回as的`current_map`
+其中`address_space_to_flatview`会返回as的`current_map`, 这个值应该是旧的flatview
 
 该宏实际上是另一个宏`MEMORY_LISTENER_CALL`的封装，在`MEMORY_LISTENER_CALL`中临时生成一个`MemoryRegionSection`结构，具体逻辑如下
 
@@ -1611,7 +1613,7 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
           (start_addr - section->offset_within_address_space);
     // 加锁
     kvm_slots_lock(kml);
-
+    // 删除
     if (!add) {
         do {
             slot_size = MIN(kvm_max_slot_size, size);
@@ -1675,13 +1677,13 @@ out:
 }
 ```
 
-### 基本检查
+### 属性检查
 
 获取**section对应的MR**的一些属性，如writeable、readonly_flag。
 
 如果对应的MR关联的内存并**不是作为ram存在**，就要进行额外的验证。这种情况如果**writeable**允许写操作或者**kvm不支持只读内存**，那么**直接返回**。
 
-### 得到section的起始地址和大小
+### kvm_align_section(): 得到section的起始地址和大小
 
 然后获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作。
 
