--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -23,7 +23,9 @@
 - [5. MEMORY_LISTENER_UPDATE_REGION(): 新FlatRange的更新](#5-memory_listener_update_region-新flatrange的更新)
   - [5.1. kvm_set_phys_mem(): 修改内核内存](#51-kvm_set_phys_mem-修改内核内存)
     - [属性检查](#属性检查)
-    - [kvm_align_section(): 得到section的起始地址和大小](#kvm_align_section-得到section的起始地址和大小)
+    - [kvm_align_section(): 得到section/fr的起始地址和大小](#kvm_align_section-得到sectionfr的起始地址和大小)
+    - [计算该section/fr对应的主机虚拟机地址(HVA)](#计算该sectionfr对应的主机虚拟机地址hva)
+    - [](#)
 - [6. 总结](#6-总结)
 - [7. 参考](#7-参考)
 
@@ -1683,7 +1685,7 @@ out:
 
 如果对应的MR关联的内存并**不是作为ram存在**，就要进行额外的验证。这种情况如果**writeable**允许写操作或者**kvm不支持只读内存**，那么**直接返回**。
 
-### kvm_align_section(): 得到section的起始地址和大小
+### kvm_align_section(): 得到section/fr的起始地址和大小
 
 然后获取section的`start_addr`和size，其中`start_addr`就是section中的`offset_within_address_space`也就是**FR**中的`offset_in_region`,接下来对size进行了对齐操作。
 
@@ -1718,6 +1720,8 @@ static hwaddr kvm_align_section(MemoryRegionSection *section,
 }
 ```
 
+### 计算该section/fr对应的主机虚拟机地址(HVA)
+
 再计算HVA, 主机虚拟地址,
 
 ```cpp
@@ -1748,6 +1752,8 @@ void *memory_region_get_ram_ptr(MemoryRegion *mr)
     return ptr;
 }
 ```
+
+### 
 
 接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。进入while循环
 
