--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1649,6 +1649,7 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
         slot_size = MIN(kvm_max_slot_size, size);
         // 生成新的slot并初始化
         mem = kvm_alloc_slot(kml);
+        // 内存大小
         mem->memory_size = slot_size;
         // start_addr是该段内存的起始地址, GPA, 虚拟机物理地址
         mem->start_addr = start_addr;
