--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -25,7 +25,7 @@
     - [属性检查](#属性检查)
     - [kvm_align_section(): 得到section/fr的起始地址和大小](#kvm_align_section-得到sectionfr的起始地址和大小)
     - [计算该section/fr对应的主机虚拟机地址(HVA)](#计算该sectionfr对应的主机虚拟机地址hva)
-    - [kvm_set_user_memory_region(): 转化为slot然后](#kvm_set_user_memory_region-转化为slot然后)
+    - [kvm_set_user_memory_region(): 转化为slot然后添加](#kvm_set_user_memory_region-转化为slot然后添加)
 - [6. 总结](#6-总结)
 - [7. 参考](#7-参考)
 
@@ -1754,7 +1754,7 @@ void *memory_region_get_ram_ptr(MemoryRegion *mr)
 }
 ```
 
-### kvm_set_user_memory_region(): 转化为slot然后
+### kvm_set_user_memory_region(): 转化为slot然后添加
 
 接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。进入while循环
 
