--- Auto-Git Commit ---

--- a/Virtualization/QEMU/4. memory/3. 具体实现机制.md
+++ b/Virtualization/QEMU/4. memory/3. 具体实现机制.md
@@ -1617,8 +1617,10 @@ static void kvm_set_phys_mem(KVMMemoryListener *kml,
     kvm_slots_lock(kml);
     // 删除
     if (!add) {
+        // 循环
         do {
             slot_size = MIN(kvm_max_slot_size, size);
+            /*  */ 
             mem = kvm_lookup_matching_slot(kml, start_addr, slot_size);
             if (!mem) {
                 goto out;
@@ -1756,7 +1758,7 @@ void *memory_region_get_ram_ptr(MemoryRegion *mr)
 
 ### kvm_set_user_memory_region(): 转化为slot然后添加
 
-接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。进入while循环
+接下来是函数的重点处理部分，即把**当前的section**转化成一个**slot**进行**添加**，但是在此之前需要处理**已存在的slot**和**新的slot**的**重叠问题**，当然如果没有重叠就好办了，直接添加即可。
 
 ```cpp
 static int kvm_set_user_memory_region(KVMMemoryListener *kml, KVMSlot *slot, bool new)
@@ -1766,6 +1768,7 @@ static int kvm_set_user_memory_region(KVMMemoryListener *kml, KVMSlot *slot, boo
     int ret;
 
     mem.slot = slot->slot | (kml->as_id << 16);
+    // 虚拟机物理地址
     mem.guest_phys_addr = slot->start_addr;
     mem.userspace_addr = (unsigned long)slot->ram;
     mem.flags = slot->flags;
